fixing 'cannot find table profile' error

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
 #    ${JAWSDB_URL}
   jpa:
     database-platform: org.hibernate.dialect.MySQL57Dialect
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
 
