--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
 #    ${JAWSDB_URL}
   jpa:
     hibernate:
-      ddl-auto=update: update
+      ddl-auto=update: create
     database-platform: org.hibernate.dialect.MySQL57Dialect
 #  h2:
 #    console:
