--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,21 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://sammysql.mysql.database.azure.com/author?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-    username: samrjonesdev@sammysql
-    password: codegud24/7
+#    url: jdbc:mysql://ewgf13uiynnisl88:lwc45bwqeae13lg3@y06qcehxdtkegbeb.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/hjyxht1xlcuo0nc9
+#    url: jdbc:mysql://sammysql.mysql.database.azure.com/author?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#    username: samrjonesdev@sammysql
+#    password: codegud24/7
+
+  url: ${AZURE_URL}
+  username: ${AZURE_USER}
+  password: ${AZURE_PW}
 #    ${JAWSDB_URL}
   jpa:
     hibernate:
-      ddl-auto=update: create
+      ddl-auto=update: update
     database-platform: org.hibernate.dialect.MySQL57Dialect
+#  profiles:
+#    active: dev
 #  h2:
 #    console:
 #      enabled: true
