--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
 #    password: ${AZURE_PW}
   jpa:
     hibernate:
-      ddl-auto=update: update
+      ddl-auto: update
     database-platform: org.hibernate.dialect.MySQL57Dialect
 ##  profiles:
 ##    active: dev
